fix: high contrast style

--- a/src/components/AttachmentLink/styles.module.css
+++ b/src/components/AttachmentLink/styles.module.css
@@ -9,7 +9,7 @@
   border-color: var(--gray-title);
 }
 
-.attachment-light {
+.attachment-high-contrast {
   border-color: var(--white);
 }
 
